[tool.poetry]
name = "ucllm-nedo-prod-kawagoshi"
version = "0.1.0"
description = ""
authors = ["Masataka Ogawa <ogawa.phiz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
hojichar = "^0.9.0"
fugashi = "^1.3.1"
ninja = "1.11.1"
packaging = "^24.0"
pip = ">=23.1"
protobuf = "<3.21.0"
pybind11 = "^2.11.1"
regex = "^2023.12.25"
six = "^1.16.0"
wheel = "^0.43.0"
accelerate = ">0.23.0"
peft = ">=0.5.0"
tokenizers = ">=0.14.0"
transformers = ">=4.34.0"
trl = ">=0.7.2"
tensorboard = "^2.16.2"
wandb = "^0.16.4"
bitsandbytes = "^0.43.0"
nltk = "^3.8.1"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
einops = "^0.7.0"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
